# tahoo

./: .gitignore  README.md  pyproject.toml
.claude/instructions/: coding-conventions.md
src/tahoo/: __init__.py  cli.py  config.py  db.py  themes.py
src/tahoo/db/: __init__.py  fetch.py  queries.py  store.py
